cambios en el DOM.js

--- a/DOM.html
+++ b/DOM.html
@@ -10,7 +10,7 @@
 
     <form action="post.php" id="f" name="elformulario">
         <label for="campo" id="etiquetaCampo">el campo de texto</label>
-        <input type="text" name="campo" size="40"> 
+        <input type="text" name="campo" size="40" id="c1"> 
 
     </form>
 <script src="javascritp/DOM.js"></script>   
